service/jellyfin/overlays/chromecast-fix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  template:
    spec:
      containers:
        # https://git.xsfx.dev/xsteadfastx/jellyfixer
        - name: jellyfixer
          image: docker.io/epcim/jellyfixer:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8088
            name: jellyfixer
            protocol: TCP
