service/jellyfin/overlays/chromecast-fix-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-chromecast-fix
  namespace: media
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
    #service: jellyfixer
spec:
  ports:
  - name: jellyfixer
    port: 8088
    protocol: TCP
    targetPort: jellyfixer
  selector:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  type: LoadBalancer
